--- a/index.html
+++ b/index.html
@@ -4,8 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <button>justice</button>
+    <div class="title">mirror</div>
+    <div class="zhengti">
+      <div class="imperfect">
+        <div class="text">
+          <h1>ImPerfect</h1>
+          <h3>가사</h3>
+        </div>
+        <figure><img src="/img(ex)/imp.jpg" alt="" /></figure>
+      </div>
+      <div class="day">
+        <div class="text">
+          <h1>예뻤어</h1>
+          <h3>가사</h3>
+        </div>
+        <figure><img src="/img(ex)/day.jpg" alt="" /></figure>
+      </div>
+      <div class="sogood">
+        <div class="text">
+          <h1>So G.OO.D</h1>
+          <h3>가사</h3>
+        </div>
+        <figure><img src="/img(ex)/sogood.jpg" alt="" /></figure>
+      </div>
+      <div class="case">
+        <div class="text">
+          <h1>CASE 143</h1>
+          <h3>가사</h3>
+        </div>
+        <figure><img src="/img(ex)/143.jpg" alt="" /></figure>
+      </div>
+      <div class="stepup">
+        <div class="text">
+          <h1>STEP UP</h1>
+          <h3>가사</h3>
+        </div>
+        <figure><img src="/img(ex)/stepup.jpg" alt="" /></figure>
+      </div>
+      <div class="crown">
+        <div class="text">
+          <h1>꽃피울 CROWN</h1>
+          <h3>가사</h3>
+        </div>
+        <figure><img src="/img(ex)/crown.jpg" alt="" /></figure>
+      </div>
+    </div>
   </body>
 </html>
