--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <!-- 主标题 -->
         <section class="title-section">
-            <h1 class="main-title">LEE TAEGEON</h1>
+            <h1 class="main-title">LEE<br>TAEGEON</h1>
         </section>
 
         <!-- 下方内容区域 -->
