--- a/index.html
+++ b/index.html
@@ -93,13 +93,14 @@
         <!-- 下方内容区域 -->
         <section class="content-section">
             <div class="content-placeholder">
-                내용 영역 1
+               
+               <p>무대</p> 
+                           </div>
+            <div class="content-placeholder">
+                <p></p>
             </div>
             <div class="content-placeholder">
-                내용 영역 2
-            </div>
-            <div class="content-placeholder">
-                내용 영역 3
+                <p>기타 콘텐츠</p>
             </div>
         </section>
     </div>
