--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
 
                 <!-- 태건에게 쪽지 보내기 按钮 -->
-                <a href="#" class="nav-button">쪽지 보내기</a>
+                <a href="#" class="nav-button">태건에게 쪽지 보내기</a>
             </div>
 
             <!-- 右侧联系我 -->
@@ -94,10 +94,10 @@
         <section class="content-section">
             <div class="content-placeholder">
                
-               <p>무대</p> 
+               <p>오프라인 행사</p> 
                            </div>
             <div class="content-placeholder">
-                <p></p>
+                <p>무대</p>
             </div>
             <div class="content-placeholder">
                 <p>기타 콘텐츠</p>
